--- a/css/beranda.css
+++ b/css/beranda.css
@@ -11,7 +11,7 @@ body {
 }
 
 .sidebar {
-    background-color: #0D0D2E; 
+    background-color: #151961; 
     width: 250px;
     height: 100vh;
     padding: 20px;
@@ -19,7 +19,7 @@ body {
 }
 
 .logo img {
-    max-width: 100%;
+    max-width: 50%;
     margin-bottom: 30px;
     width: 100%;
     height: auto;
@@ -77,7 +77,7 @@ body {
 }
 
 .header {
-    background-color: #1A1A3D;
+    background-color: #151961;
     height: 70px;
     padding: 20px;
     margin-left: 250px; 
@@ -85,6 +85,42 @@ body {
     justify-content: flex-end;
     align-items: center;
 }
+.header [.search] {
+    display: flex;
+    align-items: center;
+    border: 2px solid #333;
+    border-radius: 5px;
+    overflow: hidden;
+    justify-content: space-between;
+  }
+  
+ .header[.search input[type="text"]] {
+    padding: 10px;
+    border: none;
+    outline: none;
+    width: 200px;
+    
+ }
+    
+  .header[.search button] {
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    
+  }
+  
+  .header[.search button:hover] {
+    background-color: #white;
+  }
+  
+  #results {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #333;
+    
+  }
 
 .account-button {
     background-color: #4D4DA6;
@@ -106,3 +142,4 @@ body {
     align-items: center;
     overflow: hidden;
 }
+
