--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@ body {
     background-size: cover;
     background-position: center;
     height: 100vh;
+    flex-wrap: wrap;
 }
 
 .content h2 {
@@ -66,4 +67,65 @@ body {
     width: 100%;
     height: auto;
     border-radius: 5px;
+}
+
+@media (max-width: 900px) {
+    .hero {
+        padding: 30px;
+        flex-direction: column;
+        justify-content: center;
+        height: auto;
+    }
+
+    .content h2 {
+        font-size: 2em;
+    }
+
+    .content p {
+        font-size: 0.9em;
+        max-width: 100%;
+    }
+
+    .illustration {
+        width: 80%;
+        margin-top: 20px;
+    }
+}
+
+
+@media (max-width: 600px) {
+    .container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .logo {
+        font-size: 1.3em;
+    }
+
+    .hero {
+        padding: 20px;
+        flex-direction: column;
+        justify-content: center;
+        height: auto;
+    }
+
+    .content h2 {
+        font-size: 1.8em;
+    }
+
+    .content p {
+        font-size: 0.85em;
+        max-width: 100%;
+    }
+
+    .illustration {
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    .join-button {
+        padding: 12px 25px;
+        font-size: 1em;
+    }
 }
