--- a/css/beranda.css
+++ b/css/beranda.css
@@ -15,7 +15,7 @@ body {
 /* Sidebar Styles */
 .sidebar {
   width: 250px;
-  background-color: #696fec;
+  background-color: #1e203d;
   color: white;
   padding: 1rem;
   display: flex;
@@ -49,7 +49,7 @@ body {
 }
 
 .sidebar ul li a:hover {
-  background-color: #2c3e50;
+  background-color: #696fec;
   color: #ecf0f1;
 }
 
@@ -60,7 +60,7 @@ body {
 
 .zapier-integration button {
   padding: 0.5rem 1rem;
-  background-color: #2c3e50;
+  background-color: #696fec;
   border: none;
   color: white;
   border-radius: 4px;
@@ -69,7 +69,7 @@ body {
 }
 
 .zapier-integration button:hover {
-  background-color: #1a242f;
+  background-color: #1e203d;
 }
 
 /* Main Content Styles */
