--- a/css/html.css
+++ b/css/html.css
@@ -17,7 +17,7 @@ body {
 /* Sidebar Styles */
 .sidebar {
   width: 250px;
-  background-color: #696fec;
+  background-color: #1e203d;
   color: white;
   padding: 1rem;
   display: flex;
@@ -51,7 +51,7 @@ body {
 }
 
 .sidebar ul li a:hover {
-  background-color: #2c3e50;
+  background-color: #696fec;
   color: #ecf0f1;
 }
 
@@ -62,7 +62,7 @@ body {
 
 .zapier-integration button {
   padding: 0.5rem 1rem;
-  background-color: #2c3e50;
+  background-color: #1e203d;
   border: none;
   color: white;
   border-radius: 4px;
@@ -71,7 +71,7 @@ body {
 }
 
 .zapier-integration button:hover {
-  background-color: #1a242f;
+  background-color: #696fec;
 }
 
 /* Main Content Styles */
