--- a/css/html.css
+++ b/css/html.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
@@ -12,6 +11,7 @@ body {
   display: flex;
   width: 100%;
   min-height: 100vh;
+  flex-wrap: wrap;
 }
 
 /* Sidebar Styles */
@@ -142,7 +142,7 @@ body {
 
 .level-box .button {
   padding: 0.5rem 1rem;
-  background-color: #3498db;
+  background-color: #696fec;
   color: white;
   text-decoration: none;
   border-radius: 4px;
@@ -152,7 +152,7 @@ body {
 }
 
 .level-box .button:hover {
-  background-color: #2980b9;
+  background-color: #696fec;
 }
 
 /* Footer Styles */
@@ -187,8 +187,134 @@ body {
   object-fit: cover;
 }
 
-
 .logout-link {
   color: white;
   text-decoration: none;
+}
+
+/* Menu Toggle Button */
+.menu-toggle {
+  display: none;
+  font-size: 2rem;
+  background-color: transparent;
+  border: none;
+  color: #34495e;
+  cursor: pointer;
+}
+
+/* Responsive Styles */
+@media (max-width: 1024px) {
+  .topbar h1 {
+    font-size: 1.3rem;
+  }
+
+  .topbar input {
+    width: 50%;
+  }
+
+  .sidebar {
+    width: 200px;
+  }
+
+  .profile-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    background-color: #ddd;
+    overflow: hidden;
+    margin-left: 10px;
+  }
+
+  .profile-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .level-box,
+  .button {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    width: 0;
+    display: none;
+  }
+
+  .topbar .menu-toggle {
+    display: block;
+  }
+
+  .topbar input {
+    width: 60%;
+  }
+
+  .quiz-card {
+    padding: 0.8rem;
+  }
+
+  .button {
+    padding: 0.4rem 0.8rem;
+  }
+
+  .user-info {
+    margin-left: auto;
+  }
+
+  .level-box,
+  .button {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 480px) {
+  .topbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .topbar input {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .button {
+    width: 60%;
+    text-align: center;
+  }
+
+  .footer p {
+    font-size: 0.9rem;
+  }
+
+  /* Display sidebar when menu button is clicked */
+  .sidebar.open {
+    display: block;
+    width: 250px;
+  }
+
+  .profile-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    background-color: #ddd;
+    overflow: hidden;
+    margin-left: 10px;
+  }
+
+  .profile-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .level-box,
+  .button {
+    grid-template-columns: 1fr;
+  }
+
 }
